--- a/index.html
+++ b/index.html
@@ -19,13 +19,20 @@
             </ul>
         </div>
         <div class="hero"></div>
-        <div class="content">
-            <h2>Judul Artikel</h2>
+        <div class="content cf">
+            <div class="main">
+                <h2>Judul Artikel</h2>
             <p class="penulis">ditulis oleh <a href="#">
                 eganaww</a>. Pada 5 Juni 2024</p>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque voluptatibus autem omnis! Similique fuga blanditiis et, harum labore numquam odio explicabo beatae fugiat ea nesciunt mollitia debitis laborum! Saepe, ex.</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum possimus sapiente suscipit magnam totam beatae molestias consequuntur nisi laudantium ut voluptatibus quaerat recusandae ad sequi assumenda, esse ea soluta doloremque repellat modi ipsum deserunt? Debitis voluptatibus iure quidem praesentium quia.</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, amet sequi reiciendis velit dignissimos quam corrupti? Natus vero praesentium quod. Nihil, harum. Quaerat, cupiditate hic inventore veniam quia vero ex? Corporis laboriosam architecto possimus eaque dicta doloremque ipsam dolor aliquam.</p>
+            </div>
+            <div class="sidebar">
+                <h3>Tentang Penulis</h3>
+                <img src="img/my-pict.jpg" alt="eganaww">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore necessitatibus distinctio vitae quibusdam corrupti itaque eligendi optio reiciendis placeat blanditiis quo, explicabo accusantium eos, quidem voluptatem doloribus a quaerat quia.</p>
+            </div>
         </div>
         
         <div class="footer">
