--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="top-bar"></div>
+
     <div class="container">
+        <a href="https://eganaww.github.io" class="github" target="_blank">github</a>
         <div class="header">
             <h1 class="judul">My Website</h1>
             <ul>
